# harness-core

./: WORKSPACE
.github/: CODEOWNERS
100-migrator/container/scripts/: replace_configs.sh
110-change-data-capture/src/main/java/io/harness/changehandlers/: PlanExecutionSummaryCdChangeServiceInfraChangeDataHandlerNew.java
120-ng-manager/: BUILD.bazel  config.yml
120-ng-manager/container/scripts/: replace_configs.sh
120-ng-manager/src/main/java/io/harness/ng/: ConnectorServiceImpl.java  CustomSecretManagerHelper.java  NextGenConfiguration.java  NextGenModule.java
120-ng-manager/src/main/java/io/harness/ng/accesscontrol/migrations/: BUILD.bazel
120-ng-manager/src/main/java/io/harness/ng/accesscontrol/migrations/dao/: BUILD.bazel
120-ng-manager/src/main/java/io/harness/ng/accesscontrol/migrations/models/: BUILD.bazel
120-ng-manager/src/main/java/io/harness/ng/accesscontrol/migrations/repositories/: BUILD.bazel
120-ng-manager/src/main/java/io/harness/ng/accesscontrol/migrations/services/: BUILD.bazel
120-ng-manager/src/main/java/io/harness/ng/accesscontrol/mockserver/: BUILD.bazel
120-ng-manager/src/main/java/io/harness/ng/accesscontrol/resources/: BUILD.bazel
120-ng-manager/src/test/java/io/harness/ng/: ConnectorServiceImplTest.java
125-cd-nextgen/src/main/java/io/harness/cdng/: CDStepHelper.java  K8sHelmCommonStepHelper.java
125-cd-nextgen/src/main/java/io/harness/serializer/: CDNGRegistrars.java
125-cd-nextgen/src/test/resources/cdng/variables/: pipelineAzureARMInlineParameters.json  pipelineAzureARMInlineTemplate.json  pipelineAzureARMRemote.json  pipelineAzureBP.json
125-cd-nextgen/src/test/resources/recaster/alias/: alias.txt
125-cd-nextgen/src/test/resources/schema/DeploymentStage/: all.json
125-cd-nextgen/src/test/resources/schema/DeploymentSteps/: all.json
126-instance/src/main/java/io/harness/entities/: ArtifactDetails.java  InfrastructureMapping.java  InstanceType.java
126-instance/src/main/java/io/harness/mappers/: InstanceDetailsMapper.java
126-instance/src/main/java/io/harness/models/: ActiveServiceInstanceInfo.java
260-delegate/: BUILD.bazel  config-delegate.yml
260-delegate/container/scripts/: delegate.sh  start.sh
260-delegate/src/main/java/io/harness/eventpublisherclient/: EventPublisherClientFactory.java
260-delegate/src/main/java/io/harness/logstreaming/: LogStreamingTaskClient.java  LogStreamingTaskClientHelper.java
260-delegate/src/test/resources/: kryo-registrations.txt
325-sto-beans/src/test/resources/schema/SecurityStage/: all.json
332-ci-manager/container/scripts/: replace_configs.sh
340-ce-nextgen/: config.yml
340-ce-nextgen/container/scripts/: replace_configs.sh
340-ce-nextgen/src/main/java/io/harness/ccm/: CENextGenModule.java  (+1 more)
350-event-server/: BUILD.bazel  event-service-config.yml
360-cg-manager/: config.yml
360-cg-manager/container/scripts/: replace_configs.sh
400-rest/src/main/resources/delegatetemplates/: common.sh.ftl  delegate-helm-values.yaml.ftl  harness-ecs-delegate.json.ftl  launch-harness-delegate-without-name.sh.ftl  launch-harness-delegate.sh.ftl  launch-harness-ng-delegate.sh.ftl  start.sh.ftl
400-rest/src/main/resources/delegatetemplates/common/: delegate-environment.ftl
400-rest/src/main/resources/timescaledb/: add_parent_pipeline_to_deployment.sql
440-connector-nextgen/src/test/resources/schema/Connectors/: all.json
840-template-service/src/main/java/io/harness/: TemplateServiceModule.java
884-pms-commons/src/test/resources/: input12-merged.yml  inputSet1.yml  pipeline-extensive.yml
930-delegate-tasks/: BUILD.bazel
940-secret-manager-client/: BUILD.bazel
951-debezium-service/container/scripts/: start_process.sh
960-watcher/: config-watcher.yml
970-ng-commons/src/main/java/io/harness/: EntityType.java  SecretManagerDescriptionConstants.java
999-annotations/: BUILD.bazel
dockerization/base-images/apm/: inject-saas-apm-bins-into-dockerimage.sh
dockerization/ce-nextgen/scripts/: replace_configs.sh
dockerization/ci-manager/scripts/: replace_configs.sh
dockerization/cv-nextgen/scripts/: replace_configs.sh
dockerization/debezium-service/: Dockerfile-debezium-service-cie-jdk  Dockerfile-debezium-service-jenkins-k8-openjdk
dockerization/debezium-service/scripts/: start_process.sh
dockerization/delegate/: Dockerfile-immutable
dockerization/delegate/scripts/: start.sh
dockerization/manager/scripts/: replace_configs.sh  start_process.sh  start_process_bazel.sh
dockerization/migrator/scripts/: replace_configs.sh  start_process.sh  start_process_bazel.sh
dockerization/ng-manager/scripts/: replace_configs.sh  start_process.sh
platform-service/config/: config.yml
product/ci/addon/docker/: Dockerfile.linux.arm64
product/ci/addon/grpc/: handler.go
product/ci/addon/tasks/: BUILD.bazel  background.go  background_test.go  run.go
product/ci/engine/new/executor/: step_executor.go  step_executor_test.go
product/ci/scm/: go.mod  go.sum
product/ci/scm/git/: BUILD.bazel  git.go
product/ci/scm/proto/: scm.proto
project/: main_maven_install.json
python/splunk_intelligence/: requirements-onprem.txt  requirements.txt
scripts/bazel/: UpdateVersionInfoyaml.sh
scripts/jenkins/: author-check.sh  authorsList.txt  portal-openjdk-bazel.sh
(+1041 files in other folders)
