load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "mockserver",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//960-persistence:module",
        "//980-commons:module",
        "//999-annotations:module",
        "//access-control/contracts:module",
        "@maven//:com_google_guava_guava",
        "@maven//:org_hibernate_validator_hibernate_validator",
        "@maven//:org_mongodb_morphia_morphia",
        "@maven//:org_springframework_data_spring_data_commons",
        "@maven//:org_springframework_data_spring_data_mongodb",
    ],
)
