load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "dao",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//120-ng-manager/src/main/java/io/harness/ng/accesscontrol/migrations/models",
        "//120-ng-manager/src/main/java/io/harness/ng/accesscontrol/migrations/repositories",
        "//970-ng-commons:module",
        "//999-annotations:module",
        "@maven//:com_google_inject_guice",
    ],
)
